--- a/service1/src/main/resources/bootstrap.yml
+++ b/service1/src/main/resources/bootstrap.yml
@@ -10,3 +10,17 @@ spring:
         group: DEFAULT_GROUP
         namespace: 434d8807-0a16-4291-a810-97bf0f92abfa
         file-extension: yaml
+
+#server:
+#  port: 55556
+#spring:
+#  application:
+#    name: service2-driver
+#  cloud:
+#    nacos:
+#      config:
+#        server-addr: localhost:8848
+#        group: common
+#        namespace: 434d8807-0a16-4291-a810-97bf0f92abfa
+#        file-extension: properties
+
