--- a/provide-service/src/main/resources/application.yml
+++ b/provide-service/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 server:
   port: 55557
 spring:
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3366/homework?characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+    username: root
+    password: 123456
   application:
     name: provide-service
   cloud:
@@ -13,4 +19,9 @@ logging:
   level:
     root: info
     org.springframework: info
+
+#mybatis-plus
+mybatis-plus:
+  mapper-locations: classpath:/mapper/*.xml
+  typeAliasesPackage: com.sgq.pojo
 
