--- a/nacos-micro-service/service-1/service-1-api/pom.xml
+++ b/nacos-micro-service/service-1/service-1-api/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service-1-api</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.sgq</groupId>
+            <artifactId>service-2-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
   
 
 </project>
