--- a/nacos-micro-service/service-1/service-1-server/pom.xml
+++ b/nacos-micro-service/service-1/service-1-server/pom.xml
@@ -23,6 +23,14 @@
              <artifactId>spring-cloud-starter-dubbo</artifactId>
              <version>2.2.1.RELEASE</version>
          </dependency>
+
+         <dependency>
+             <groupId>com.sgq</groupId>
+             <artifactId>service-2-api</artifactId>
+             <version>0.0.1-SNAPSHOT</version>
+         </dependency>
+
+
      </dependencies>
 
 
