--- a/nacos-micro-service/service-2/service-2-server/pom.xml
+++ b/nacos-micro-service/service-2/service-2-server/pom.xml
@@ -10,6 +10,24 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service-2-server</artifactId>
+     <dependencies>
+         <dependency>
+             <groupId>com.sgq</groupId>
+             <artifactId>service-2-api</artifactId>
+             <version>0.0.1-SNAPSHOT</version>
+         </dependency>
 
+         <dependency>
+             <groupId>com.alibaba.cloud</groupId>
+             <artifactId>spring-cloud-starter-dubbo</artifactId>
+             <version>2.2.1.RELEASE</version>
+         </dependency>
+
+         <dependency>
+             <groupId>com.alibaba</groupId>
+             <artifactId>druid-spring-boot-starter</artifactId>
+             <version>1.1.9</version>
+         </dependency>
+     </dependencies>
 
 </project>
