复习一下nacos的远程调用与dubbo的使用

--- a/nacos-micro-service/pom.xml
+++ b/nacos-micro-service/pom.xml
@@ -16,6 +16,7 @@
         <module>service-1</module>
         <module>service-2</module>
         <module>api-gateway</module>
+        <module>service-3</module>
     </modules>
 
 
