--- a/nacos-micro-service/service-3/pom.xml
+++ b/nacos-micro-service/service-3/pom.xml
@@ -3,14 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>service-1</artifactId>
+        <artifactId>nacos-micro-service</artifactId>
         <groupId>com.sgq</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-1-api</artifactId>
-
+    <artifactId>service-3</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>service-3-api</module>
+        <module>service-3-server</module>
+    </modules>
 
 
 </project>
