--- a/nacos-micro-service/service-2/service-2-api/pom.xml
+++ b/nacos-micro-service/service-2/service-2-api/pom.xml
@@ -10,6 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service-2-api</artifactId>
+    <dependencies>
 
+    </dependencies>
 
 </project>
