--- a/nacos-micro-service/service-3/service-3-server/pom.xml
+++ b/nacos-micro-service/service-3/service-3-server/pom.xml
@@ -3,30 +3,31 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>nacos-micro-service</artifactId>
+        <artifactId>service-3</artifactId>
         <groupId>com.sgq</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-1</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>service-1-api</module>
-        <module>service-1-server</module>
-    </modules>
+    <artifactId>service-3-server</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.sgq</groupId>
-            <artifactId>service-2-api</artifactId>
+            <artifactId>service-3-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>com.sgq</groupId>
-            <artifactId>service-3-api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-dubbo</artifactId>
+            <version>2.2.1.RELEASE</version>
+        </dependency>
+
+        <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>druid-spring-boot-starter</artifactId>
+        <version>1.1.9</version>
         </dependency>
     </dependencies>
 
