--- a/nacos-micro-service/service-3/service-3-server/pom.xml
+++ b/nacos-micro-service/service-3/service-3-server/pom.xml
@@ -29,6 +29,13 @@
         <artifactId>druid-spring-boot-starter</artifactId>
         <version>1.1.9</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.sun.mail/smtp -->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>smtp</artifactId>
+            <version>1.6.5</version>
+        </dependency>
     </dependencies>
 
 </project>
