1.实现了email的服务。 2.解决了网关返回提示时中文乱码的问题。 3.增加了一个sql文件。

--- a/nacos-micro-service/api-gateway/src/main/resources/bootstrap.yml
+++ b/nacos-micro-service/api-gateway/src/main/resources/bootstrap.yml
@@ -1,6 +1,11 @@
 server:
   port: 55580
 spring:
+  http:
+    encoding:
+      charset: gb2312
+      enabled: true
+      force: true
   application:
     name: api-gateway
   main:
