--- a/nacos-micro-service/service-3/service-3-server/pom.xml
+++ b/nacos-micro-service/service-3/service-3-server/pom.xml
@@ -36,6 +36,18 @@
             <artifactId>smtp</artifactId>
             <version>1.6.5</version>
         </dependency>
+
+        <!-- 二维码工具类 -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.2.0</version>
+        </dependency>
     </dependencies>
 
 </project>
