支付宝沙箱测试完成~~

--- a/nacos-micro-service/service-alipay/service-alipay-server/pom.xml
+++ b/nacos-micro-service/service-alipay/service-alipay-server/pom.xml
@@ -3,22 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>alibaba</artifactId>
+        <artifactId>service-alipay</artifactId>
         <groupId>com.sgq</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>nacos-micro-service</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>application-1</module>
-        <module>service-1</module>
-        <module>service-2</module>
-        <module>api-gateway</module>
-        <module>service-3</module>
-        <module>service-alipay</module>
-    </modules>
+    <artifactId>service-alipay-server</artifactId>
 
+    <dependencies>
+
+    </dependencies>
 
 </project>
