--- a/nacos-micro-service/service-2/service-2-server/src/main/resources/bootstrap.yml
+++ b/nacos-micro-service/service-2/service-2-server/src/main/resources/bootstrap.yml
@@ -10,7 +10,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/homework?characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
     username: root
-    password: 123456
+    password: haoclay
   cloud:
     nacos:
       config:
