--- a/nacos-micro-service/service-alipay/service-alipay-api/pom.xml
+++ b/nacos-micro-service/service-alipay/service-alipay-api/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>alibaba</artifactId>
+        <artifactId>service-alipay</artifactId>
         <groupId>com.sgq</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-2</artifactId>
+    <artifactId>service-alipay-api</artifactId>
 
 
 </project>
