--- a/service1-1/pom.xml
+++ b/service1-1/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-1</artifactId>
+    <artifactId>service-1-1</artifactId>
 
     <dependencies>
 
