--- a/service2-2/pom.xml
+++ b/service2-2/pom.xml
@@ -9,16 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>nacos-micro-service</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>application-1</module>
-        <module>service-1</module>
-        <module>service-2</module>
-        <module>api-gateway</module>
-        <module>service-3</module>
-        <module>service-alipay</module>
-    </modules>
+    <artifactId>service-2-2</artifactId>
+    <name>service-2-2</name>
 
 
 </project>
