--- a/nacos-micro-service/service-3/service-3-server/src/main/resources/bootstrap.yml
+++ b/nacos-micro-service/service-3/service-3-server/src/main/resources/bootstrap.yml
@@ -1,47 +1,41 @@
-server:
-  port: ${port:55533}
-  servlet:
-    context-path: /service3
-spring:
-
-  application:
-    name: service-3-server
-  datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/homework?characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
-    username: root
-    password: 123456
-  cloud:
-    nacos:
-      config:
-        server-addr: localhost:8848,127.0.0.1:8849
-        group: SERVER
-        namespace: 434d8807-0a16-4291-a810-97bf0f92abfa
-        file-extension: yaml
-      discovery:
-        server-addr: localhost:8848,127.0.0.1:8849
-        namespace: 434d8807-0a16-4291-a810-97bf0f92abfa
-        cluster-name: DEFAULT
-  thymeleaf:
-    prefix: classpath:/templates/
-    suffix: .html
 dubbo:
-  scan:
-  #dubbo 服务扫描基准包
-    base-packages: com.sgq.service
-  protocol:
-  #dubbo协议
-    name: dubbo
-  #dubbo协议端口
-    port: ${dubbo_port:20813}
-  registry:
-    address: nacos://127.0.0.1:8848,127.0.0.1:8849
-  application:
-    qos-enable: false #dubbo运维服务是否开启
-  consumer:
-    check: false #启动时就否检查依赖的服务
-
-#mybatis-plus
+    application:
+        qos-enable: false
+    consumer:
+        check: false
+    protocol:
+        name: dubbo
+        port: ${dubbo_port:20814}
+    registry:
+        address: nacos://127.0.0.1:8848,127.0.0.1:8849
+    scan:
+        base-packages: com.sgq.service
 mybatis-plus:
-  mapper-locations: classpath:/mapper/*.xml
+    mapper-locations: classpath:/mapper/*.xml
+server:
+    port: ${port:55533}
+    servlet:
+        context-path: /service3
+spring:
+    application:
+        name: service-3-server
+    cloud:
+        nacos:
+            config:
+                file-extension: yaml
+                group: SERVER
+                namespace: 434d8807-0a16-4291-a810-97bf0f92abfa
+                server-addr: localhost:8848,127.0.0.1:8849
+            discovery:
+                cluster-name: DEFAULT
+                namespace: 434d8807-0a16-4291-a810-97bf0f92abfa
+                server-addr: localhost:8848,127.0.0.1:8849
+    datasource:
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        password: 123456
+        type: com.alibaba.druid.pool.DruidDataSource
+        url: jdbc:mysql://localhost:3306/homework?characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+        username: root
+    thymeleaf:
+        prefix: classpath:/templates/
+        suffix: .html
