--- a/nacos-sentinel-service/goods-service/goods-server/pom.xml
+++ b/nacos-sentinel-service/goods-service/goods-server/pom.xml
@@ -25,6 +25,11 @@
             <version>1.1.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
