--- a/nacos-sentinel-service/user-service/user-server/src/main/resources/bootstrap.yml
+++ b/nacos-sentinel-service/user-service/user-server/src/main/resources/bootstrap.yml
@@ -5,7 +5,7 @@ dubbo:
     check: false
   protocol:
     name: dubbo
-    port: ${dubbo_port:20815}
+    port: ${dubbo_port:20811}
   registry:
     address: nacos://127.0.0.1:8848,127.0.0.1:8849
   scan:
@@ -13,9 +13,9 @@ dubbo:
 mybatis-plus:
   mapper-locations: classpath:/mapping/*.xml
 server:
-  port: ${port:8801}
-  servlet:
-    context-path: /user-service
+  port: ${port:8811}
+#  servlet:
+#    context-path: /user-service
 
 spring:
   application:
@@ -27,6 +27,8 @@ spring:
         group: NACOS-SENTINEL
         namespace: 8823d91b-4318-4c4a-a06e-9ecde7d31c9b
         server-addr: localhost:8848,127.0.0.1:8849
+        refresh-enabled: true
+        enable-remote-sync-config: true
       discovery:
         cluster-name: DEFAULT
         namespace: 8823d91b-4318-4c4a-a06e-9ecde7d31c9b
